# arko

./: .gitignore  .markdownlint-cli2.jsonc  CITATION.cff  DECISIONS.md  LICENSE  MILESTONES.md  README.md  package.json  rust-toolchain.toml
.github/workflows/: engine.yml  specs.yml
api/: README.md
apps/web/: package.json
docs/: arko-execution-guide.md  arko-master-spec-v1.md  arko-tech-spec-v1.md  arko-tech-spec-v2.md  next-16-patterns.md  phase-0-compile-risks.md  phase-1-closeout.md  phase-2-boundary-memo.md  phase-2-product-spec.md
docs/licenses/: cml-ia-leiden.md  jrc-ef.md  recipe-2016-rivm.md  usda-lca-commons.md
docs/release-notes/: v0.0.1.md  v0.2.0.md
drafts/blog-posts/: README.md  editorial-debt.md
engine/: CHANGELOG.md  Cargo.toml  README.md
engine/core/: Cargo.toml
engine/core/src/: error.rs  lib.rs  license.rs  matrices.rs  meta.rs  parameters.rs  pipeline.rs  provenance.rs  sign.rs  solver.rs  study.rs  units.rs  warning.rs
engine/core/tests/: minimal_example.rs
engine/differential/: Cargo.toml
engine/differential/src/: lib.rs  loader.rs  properties.rs  report.rs  runner.rs  seed.rs  vector.rs
engine/differential/tests/: conformance_tests.rs  property_tests.rs
engine/io-ecospold2/: Cargo.toml
engine/io-ecospold2/src/: error.rs  lib.rs  model.rs  reader.rs
engine/io-ecospold2/tests/: reader_tests.rs
engine/io-ecospold2/tests/fixtures/: steel.xml
engine/io-ilcd/: Cargo.toml
engine/io-ilcd-linker/: Cargo.toml
engine/io-ilcd-linker/src/: bundle.rs  column.rs  error.rs  flow.rs  flowproperty.rs  lib.rs  resolver.rs  unitgroup.rs  xml.rs
engine/io-ilcd-linker/tests/: agribalyse_smoke.rs  bundle_tests.rs  ef_carpet_calc_smoke.rs  ef_carpet_parity_smoke.rs  ef_reference_package_resolver_smoke.rs  ef_reference_smoke.rs  epd_bundle_tests.rs  oekobaudat_smoke.rs
engine/io-ilcd-linker/tests/fixtures/epd_minimal_bundle/flowproperties/: aaaaaaaa-0000-0000-0000-000000000010.xml
engine/io-ilcd-linker/tests/fixtures/epd_minimal_bundle/flows/: aaaaaaaa-0000-0000-0000-000000000001.xml  aaaaaaaa-0000-0000-0000-000000000002.xml
engine/io-ilcd-linker/tests/fixtures/epd_minimal_bundle/processes/: aaaaaaaa-0000-0000-0000-000000000500.xml
engine/io-ilcd-linker/tests/fixtures/epd_minimal_bundle/unitgroups/: aaaaaaaa-0000-0000-0000-000000000100.xml  aaaaaaaa-0000-0000-0000-000000000101.xml
engine/io-ilcd-linker/tests/fixtures/minimal_bundle/flowproperties/: 00000000-0000-0000-0000-000000000010.xml
engine/io-ilcd-linker/tests/fixtures/minimal_bundle/flows/: 00000000-0000-0000-0000-000000000001.xml
engine/io-ilcd-linker/tests/fixtures/minimal_bundle/processes/: 00000000-0000-0000-0000-000000000500.xml
engine/io-ilcd-linker/tests/fixtures/minimal_bundle/unitgroups/: 00000000-0000-0000-0000-000000000100.xml
engine/io-ilcd/src/: error.rs  lib.rs  model.rs  reader.rs
engine/io-ilcd/tests/: reader_tests.rs
engine/io-ilcd/tests/fixtures/: cement_es.xml
engine/io-lcax/: Cargo.toml
engine/io-lcax/src/: error.rs  lib.rs  metadata.rs  writer.rs
engine/io-lcax/tests/: minimal_writer_smoke.rs
engine/io-olca-jsonld/: Cargo.toml  SUPPORTED.md
engine/io-olca-jsonld/src/: adapter.rs  bundle.rs  error.rs  lib.rs  model.rs  reader.rs
engine/io-olca-jsonld/tests/: beef_bundle_smoke.rs  beef_factored_parity_smoke.rs  beef_multi_process_parity_smoke.rs
engine/license/: Cargo.toml
engine/license/src/: authorize.rs  fire.rs  lib.rs  presets.rs
engine/license/tests/: authorize_tests.rs
engine/methods/: Cargo.toml
engine/methods/src/: builder.rs  cml_ia.rs  ef_31.rs  lib.rs  method.rs  recipe_2016.rs  registry.rs  standard.rs
engine/methods/tests/: end_to_end.rs
engine/parameters/: Cargo.toml
engine/parameters/src/: lib.rs
engine/sensitivity/: Cargo.toml
engine/sensitivity/src/: factored.rs  lib.rs  updates.rs
engine/sensitivity/tests/: smw_parity.rs
engine/solvers-dense/: Cargo.toml
engine/solvers-dense/src/: lib.rs
engine/solvers-sparse/: Cargo.toml
engine/solvers-sparse/src/: lib.rs
engine/solvers-sparse/tests/: parity_tests.rs
engine/uncertainty/: Cargo.toml
engine/uncertainty/src/: distribution.rs  lib.rs  monte_carlo.rs  stats.rs
engine/uncertainty/tests/: monte_carlo_tests.rs
engine/units/: Cargo.toml
engine/units/src/: atom.rs  dimension.rs  lib.rs  parser.rs  unit.rs
engine/units/tests/: conversion_tests.rs  parse_tests.rs
engine/validation/: Cargo.toml
engine/validation/src/: lib.rs
specs/: README.md
specs/api/: README.md
specs/calc/: v0.1.md
specs/license/: README.md  v0.1.md
specs/sync/: README.md
web/: README.md
