[workspace]
resolver = "2"
members = [
    "core",
    "differential",
    "io-ecospold2",
    "io-ilcd",
    "io-ilcd-linker",
    "io-lcax",
    "io-olca-jsonld",
    "license",
    "methods",
    "parameters",
    "sensitivity",
    "solvers-dense",
    "solvers-sparse",
    "uncertainty",
    "units",
    "validation",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
authors = ["Goibix S.L. <engineering@arko.earth>"]
license = "Apache-2.0"
repository = "https://github.com/goibix/arko"
homepage = "https://arko.earth"

[workspace.dependencies]
sprs = { version = "0.11", features = ["serde"] }
nalgebra = "0.33"
faer = "0.20"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
blake3 = "1"
approx = "0.5"

# Inter-crate path dependencies — kept in workspace so versions move in lockstep.
arko-core = { path = "core", version = "0.2.0" }
arko-differential = { path = "differential", version = "0.2.0" }
arko-io-ecospold2 = { path = "io-ecospold2", version = "0.2.0" }
arko-io-ilcd = { path = "io-ilcd", version = "0.2.0" }
arko-io-ilcd-linker = { path = "io-ilcd-linker", version = "0.2.0" }
arko-io-lcax = { path = "io-lcax", version = "0.2.0" }
arko-io-olca-jsonld = { path = "io-olca-jsonld", version = "0.2.0" }
arko-license = { path = "license", version = "0.2.0" }
arko-methods = { path = "methods", version = "0.2.0" }
arko-parameters = { path = "parameters", version = "0.2.0" }
arko-sensitivity = { path = "sensitivity", version = "0.2.0" }
arko-solvers-dense = { path = "solvers-dense", version = "0.2.0" }
arko-solvers-sparse = { path = "solvers-sparse", version = "0.2.0" }
arko-uncertainty = { path = "uncertainty", version = "0.2.0" }
arko-units = { path = "units", version = "0.2.0" }
arko-validation = { path = "validation", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
float_cmp = "allow"
manual_range_contains = "allow"
many_single_char_names = "allow"
similar_names = "allow"
needless_range_loop = "allow"
match_wildcard_for_single_variants = "allow"
default_trait_access = "allow"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
