[package]
name = "arko-io-ilcd"
description = "Arko ILCD XML reader — parses EU JRC ILCD process datasets (PEF / DAP / EPD-Norge / ECO Platform) into typed Rust structs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
roxmltree = "0.20"

[dev-dependencies]
serde_json.workspace = true
