[package]
name = "arko-methods"
description = "Arko impact-method registry — characterization factor tables and C-matrix construction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
arko-core.workspace = true
sprs.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
arko-solvers-dense.workspace = true
approx.workspace = true
