[package]
name = "arko-solvers-dense"
description = "Arko dense LU solver — nalgebra-backed. Intended for small studies (n < 100) per specs/calc/v0.1.md §6.3."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
arko-core.workspace = true
sprs.workspace = true
nalgebra.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
