[package]
name = "arko-uncertainty"
description = "Arko uncertainty propagation — distributions and Monte Carlo runner per specs/calc/v0.1.md §9."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
rand = "0.8"
rand_distr = "0.4"
rand_mt = "4"

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
