[package]
name = "arko-validation"
description = "Arko study validator — implements the §6.1 construction-order checks from specs/calc/v0.1.md."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
arko-core.workspace = true
arko-parameters.workspace = true
arko-units.workspace = true

[dev-dependencies]
sprs.workspace = true
